<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="100dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/meterEmail" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:hint="@string/meterContrasenha" />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/buttonAcceso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@string/button"
            android:text="@string/login"
            app:cornerRadius="4dp"
            app:icon="@drawable/proximo"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:textColor="#2F80EB"
            android:textSize="18dp"
            android:text="@string/contrasenhaOlvidada" />

        <Button
            android:id="@+id/buttonPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@string/button"
            android:text="@string/cambiarPass"
            app:cornerRadius="4dp"
            app:icon="@drawable/email"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:textColor="#2F80EB"
            android:textSize="18dp"
            android:text="@string/nocuenta"/>

        <Button
            android:id="@+id/buttonReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@string/button"
            android:text="@string/registro"
            app:cornerRadius="4dp"
            app:icon="@drawable/register"
            android:textSize="18dp"/>

        <Button
            android:id="@+id/buttonDirecto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>