<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity_registro"
    android:paddingTop="90dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meterEmail" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:password="true"
            android:hint="@string/meterContrasenha" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:password="true"
            android:hint="@string/repetirContrasenha" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonAcceso2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/registro"
        android:fontFamily="sans-serif-smallcaps"
        android:textAlignment="center"
        android:textSize="20dp"
        app:cornerRadius="4dp"
        android:backgroundTint="@color/colorPrimary"
        app:icon="@drawable/register"
        />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tienesContrasenha"
        android:textColor="#2F80EB"
        android:textSize="17dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonIS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:fontFamily="sans-serif-smallcaps"
        android:textAlignment="textStart"
        android:textSize="20dp"
        android:backgroundTint="@color/colorPrimary"
        app:cornerRadius="4dp"
        app:icon="@drawable/proximo"
        />

</LinearLayout>