<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity_agenda">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="622dp"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="48dp"
            android:layout_height="32dp"
            android:layout_gravity="right"
            app:srcCompat="@drawable/usuario"
            />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/Agenda"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recompensas"
            android:fontFamily="sans-serif-smallcaps"
            android:textAlignment="center"
            android:textSize="20dp"
            android:backgroundTint="@color/colorPrimary"
            app:cornerRadius="4dp"
            />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chipCal"
            android:fontFamily="sans-serif-smallcaps"
            android:textAlignment="center"
            android:textSize="20dp"
            android:backgroundTint="@color/colorPrimary"
            app:cornerRadius="4dp"/>

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perfil"
            android:fontFamily="sans-serif-smallcaps"
            android:textAlignment="center"
            android:textSize="20dp"
            android:backgroundTint="@color/colorPrimary"
            app:cornerRadius="4dp"/>

        <Button
            android:id="@+id/buttonAjustes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chipSettings"
            android:fontFamily="sans-serif-smallcaps"
            android:textAlignment="center"
            android:textSize="20dp"
            android:backgroundTint="@color/colorPrimary"
            app:cornerRadius="4dp"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/agendahoy"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
             />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
             />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="+" />

            <Button
                android:id="@+id/button2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="-" />
        </LinearLayout>
    </LinearLayout>

    <!-- Menú Inferior -->
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="bottom"
        app:dividerColor="@color/colorPrimary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:text="@string/chipCal"
            android:textAlignment="center"
            app:chipIcon="@drawable/calendario" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:text="@string/chipHome"
            android:layout_toRightOf="@id/chip"
            android:textAlignment="center"
            app:chipIcon="@drawable/home" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAj"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/chip2"
            android:text="@string/chipSettings"
            android:textAlignment="center"
            app:chipIcon="@drawable/ajuste" />
    </RelativeLayout>

</FrameLayout>
